--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: kyle@leblanc.sh
 description: >- # this means to ignore newlines until "baseurl:"
   LeBlanc.sh is a blog about tech
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "leblanc.sh" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://leblanc.sh" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kyleblanc
 github_username:  leblanck
 
