--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ author:
 # Hero Settings
 hero:
   title: Kyle LeBlanc
-  description: Thoughts, stories and ideas.
-  image: '/images/01.jpg'
+  description: Thoughts. Ideas. Experiments.
+  image: '/images/uns1.jpg'
 
 
 #-------------------------------
@@ -34,14 +34,12 @@ contact:
 # Example of adding a new link to the footer - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
-- {icon: "ion-logo-twitter", link: "https://twitter.com"}
-- {icon: "ion-logo-facebook", link: "https://facebook.com"}
-- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", link: "https://instagram.com"}
-- {icon: "ion-logo-pinterest", link: "https://pinterest.com"}
-- {icon: "ion-logo-youtube", link: "https://youtube.com"}
-- {icon: "ion-logo-github", link: "https://github.com"}
-- {icon: "ion ion-logo-vimeo", link: "https://vimeo.com/"}
+- {icon: "ion-logo-twitter", link: "https://twitter.com/kyleblanc"}
+- {icon: "ion-logo-dribbble", link: "https://dribbble.com/kyleblanc"}
+- {icon: "ion-logo-instagram", link: "https://instagram.com/kyleblanc"}
+- {icon: "ion-logo-github", link: "https://github.com/leblanck"}
+- {icon: "ion-logo-twitch", link: "https://www.twitch.tv/h0undz__"}
+- {icon: "ion-logo-steam", link: "https://steamcommunity.com/id/ToplessNachos/"}
 
 
 #-------------------------------
@@ -57,7 +55,8 @@ google-analytics: # Add your identifier. For example UA-99631805-1.
 #-------------------------------
 # Newsletter
 mailchimp: enable # To enable the mailchimp form, use the value 'enable'. To disable the form, leave the field blank.
-mailchimp-identifier: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+mailchimp-identifier: leblanc.us1.list-manage.com/subscribe/post?u=33c18e625cccfebeacd68e215&amp;id=4c71b4bb69
+# Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
 
 
 #-------------------------------
