--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ contact:
 # Example of adding a new link to the footer - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
-- {icon: "mail-unread", link: "mailto:kyle@leblanc.sh?subject=Howdy Kyle!"}
+- {icon: "ion-mail-unread", link: "mailto:kyle@leblanc.sh?subject=Howdy Kyle!"}
 - {icon: "ion-logo-twitter", link: "https://twitter.com/kyleblanc"}
 - {icon: "ion-logo-dribbble", link: "https://dribbble.com/kyleblanc"}
 - {icon: "ion-logo-instagram", link: "https://instagram.com/kyleblanc"}
