--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social:
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: G-BX88X3TZV2 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
