--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ hero:
 # Contact Settings
 contact:
   email: kyle@leblanc.sh # Add your email for contact form
-  description: Let's Chat! # Add a description of your form
+  description: Want to talk about a blog post, or just have something on your mind? Reach out below! # Add a description of your form
   formspreeid: mnqoyelw
 
 #-------------------------------
