--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ social:
 - {icon: "ion-logo-twitter", link: "https://twitter.com/kyleblanc"}
 - {icon: "ion-logo-dribbble", link: "https://dribbble.com/kyleblanc"}
 - {icon: "ion-logo-instagram", link: "https://instagram.com/kyleblanc"}
-- {icon: "ion-book", link: "https://www.goodreads.com/kyleblanc"}
+- {icon: "ion-ios-book", link: "https://www.goodreads.com/kyleblanc"}
 - {icon: "ion-logo-github", link: "https://github.com/leblanck"}
 - {icon: "ion-logo-twitch", link: "https://www.twitch.tv/ToplessNachoss"}
 - {icon: "ion-logo-steam", link: "https://steamcommunity.com/id/ToplessNachos/"}
